# nervana

./: Cargo.toml  flake.nix  shell.nix
docs/: readme.md
evolution-rs-2d/: Cargo.toml
evolution-rs-2d/src/: blob.rs  genome.rs  main.rs
evolution-rs-3d/: Cargo.toml
nervana-2d/: Cargo.toml
nervana-2d/src/: blob.rs  genome.rs  neurons.rs  simulate.rs
nervana-3d/: Cargo.toml
nervana-3d/src/: blob.rs  main.rs  network.rs  neurons.rs  simulate.rs
