[package]
name = "nervana-2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.13"
rand = "0.9.0"
gl = "0.14" # linking issues
serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"
hex = "0.4.3"
rayon = "1.10.0"
